<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_apps">Contact Apps</string>
    <string name="get_started">Get Started</string>
    <string name="no_telepon">no telepon</string>
    <string name="username">username</string>
    <string name="alamat">alamat</string>
    <string name="nomer_telepone">nomer telepone</string>
    <string name="email">email</string>
    <string name="tanggal_lahir">tanggal lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tambah">Tambah</string>
    <string name="detail_contact">Detail Contact</string>
    <string name="kembali">Kembali</string>
</resources>